--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -5,3 +5,5 @@ LogIn = Log In
 Register = Register
 ForgotPass = Forgot Password
 detailPageTitle = Aloha
+SubmitEmail = Submit Email
+SubmitRegister = Submit Register
