--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -7,3 +7,13 @@ ForgotPass = Forgot Password
 detailPageTitle = Aloha
 SubmitEmail = Submit Email
 SubmitRegister = Submit Register
+
+#After Login
+RequestPEG = Request new PEG
+DisplayPEGList = Display PEG list
+ListSentReceived = Display list of sent/received feedback 
+ViewProfile = View my profile
+NewFeedback =  New feedback
+LogOut = Log Out 
+
+
