--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -7,3 +7,4 @@ ForgotPass = Forgot Password
 detailPageTitle = Aloha
 SubmitEmail = Submit Email
 SubmitRegister = Submit Register
+RegisterSuccess = Registration successfully completed! 
