--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -8,3 +8,13 @@ detailPageTitle = Aloha
 SubmitEmail = Submit Email
 SubmitRegister = Submit Register
 
+
+#After Login
+RequestPEG = Request new PEG
+DisplayPEGList = Display PEG list
+ListSentReceived = Display list of sent/received feedback 
+ViewProfile = View my profile
+NewFeedback =  New feedback
+LogOut = Log Out 
+
+
