--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -4,6 +4,7 @@
 LogIn = Log In
 Register = Register
 ForgotPass = Forgot Password
+ChangePassword = Change Password
 detailPageTitle = Aloha
 SubmitEmail = Submit Email
 SubmitRegister = Submit Register
