--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -17,5 +17,5 @@ ListSentReceived = Display list of sent/received feedback
 ViewProfile = View my profile
 NewFeedback =  New feedback
 LogOut = Log Out 
-
+RatingTooltip = Rating\n1 - Dissapointing\n2 - Mediocre\n3 - Average\n4 - Good\n5 - Excellent
 
