--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,6 +9,9 @@ detailPageTitle = Aloha
 SubmitEmail = Submit Email
 SubmitRegister = Submit Register
 
+#ForgotPass
+ForgotPassword = Forgot Password
+
 
 #After Login
 RequestPEG = Request new PEG
