--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -20,8 +20,6 @@ Feedback = Feedback
 LogOut = Log Out 
 
 
-
-
 #After Login
 RequestPEG = Request new PEG
 DisplayPEGList = Display PEG list
@@ -29,3 +27,6 @@ ListSentReceived = Display list of sent/received feedback
 NewFeedback =  New feedback
 RatingTooltip = Rating\n1 - Dissapointing\n2 - Mediocre\n3 - Average\n4 - Good\n5 - Excellent
 
+
+ManagerFeedback = Manager Feedback
+ManagerPEG = Manager PEG
