--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,5 +1,6 @@
 # App Descriptor
 
+
 # LogReg
 LogIn = Log In
 Register = Register
@@ -13,11 +14,6 @@ SubmitRegister = Submit Register
 ForgotPassword = Forgot Password
 ChangePassword  = Change Password
 
-# Main
-ViewProfile = View my profile
-PEG = PEG
-Feedback = Feedback
-LogOut = Log Out 
 
 # After Login
 RequestPEG = Request new PEG
@@ -29,3 +25,37 @@ RatingTooltip = Rating\n1 - Dissapointing\n2 - Mediocre\n3 - Average\n4 - Good\n
 
 ManagerFeedback = Manager Feedback
 ManagerPEG = Manager PEG
+
+
+
+#Main Page
+MainPageTitle = Main Menu
+ProfileBtn = My profile
+PEG = PEG
+Feedback = Feedback 360
+TeamFeedback = Team Feedback
+
+
+#PEG
+PEGPageTitle = List of PEGs
+IconTabFilterAllPEGs = All PEGs
+IconTabFilterNewPEGs = New
+IconTabFilterPendingPEGs  = Pending
+IconTabFilterCompletedPEGs = Completed
+PEGRequestBtn = New Request
+
+
+#Feedback 360 
+FeedbackPageTitle = Feedback List
+IconTabFilterAllFeedbacks = All Feedbacks
+IconTabFilterSentFeedbacks = Sent
+IconTabFilterReceivedFeedbacks = Received
+FeedbackRequestBtn = New Request
+
+
+#Team Feedback
+MyTeamFeedbackPageTitle = My Team Feedback
+IconTabFilterAllTeamFeedbacks = All Feedbacks
+IconTabFilterNewTeamFeedbacks = New
+IconTabFilterPendingTeamFeedbacks = Pending
+IconTabFilterCompletedTeamFeedbacks = Completed
