--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -2,17 +2,24 @@
 
 
 # LogReg
-LogIn = Log In
-Register = Register
-ForgotPass = Forgot Password
-ChangePassword = Change Password
-detailPageTitle = Aloha
-SubmitEmail = Submit Email
-SubmitRegister = Submit Register
+loginBtn = Log In
+registerBtn = Register
+forgotPassBtn = Forgot Password
+
+
+#Register
+submitRegisterBtn = Submit Register
+
+
+#Forgot Password
+changePasswordBtn = Change Password
+
+
+submitEmailBtn = Submit Email
 
 # ForgotPass
-ForgotPassword = Forgot Password
-ChangePassword  = Change Password
+forgotPassword = Forgot Password
+changePassword  = Change Password
 
 
 # After Login
@@ -27,35 +34,60 @@ ManagerFeedback = Manager Feedback
 ManagerPEG = Manager PEG
 
 
-
 #Main Page
-MainPageTitle = Main Menu
-ProfileBtn = My profile
+mainPageTitle = Main Menu
+profileBtn = My profile
 PEG = PEG
-Feedback = Feedback 360
-TeamFeedback = Team Feedback
+feedback = Feedback 360
+teamFeedback = Team Feedback
 
 
 #PEG
 PEGPageTitle = List of PEGs
-IconTabFilterAllPEGs = All PEGs
-IconTabFilterNewPEGs = New
-IconTabFilterPendingPEGs  = Pending
-IconTabFilterCompletedPEGs = Completed
+iconTabFilterAllPEGs = All PEGs
+iconTabFilterNewPEGs = New
+iconTabFilterPendingPEGs  = Pending
+iconTabFilterCompletedPEGs = Completed
 PEGRequestBtn = New Request
+columnEvaluator = Evaluator
+columnEmployee = Employee
+columnProject  = Project
+columnStatus = Status
+columnRequestDate  = RequestDate
 
 
 #Feedback 360 
-FeedbackPageTitle = Feedback List
-IconTabFilterAllFeedbacks = All Feedbacks
-IconTabFilterSentFeedbacks = Sent
-IconTabFilterReceivedFeedbacks = Received
-FeedbackRequestBtn = New Request
+feedbackPageTitle = Feedback List
+iconTabFilterAllFeedbacks = All Feedbacks
+iconTabFilterSentFeedbacks = Sent
+iconTabFilterReceivedFeedbacks = Received
+feedbackRequestBtn = New Request
+columnFromUser = From User
+columnToUser = To User
+columnProject = Project
+columnCategory = Category
+columnRating = Rating
+columnSentDate = Sent Date
+#Request New Feedback
+newFeedbackPage = New Feedback 
+selectUserInput = Select User
+selectProjectsInput = Select Projects
+anonymousCheckBox = Anonymous feedback
+categoryFeedback= Offer feedback based on the following skill
+description = Description
+descriptionTextArea= Enter Text
+
 
 
 #Team Feedback
-MyTeamFeedbackPageTitle = My Team Feedback
-IconTabFilterAllTeamFeedbacks = All Feedbacks
-IconTabFilterNewTeamFeedbacks = New
-IconTabFilterPendingTeamFeedbacks = Pending
-IconTabFilterCompletedTeamFeedbacks = Completed
+myTeamFeedbackPageTitle = My Team Feedback
+iconTabFilterAllTeamFeedbacks = All Feedbacks
+iconTabFilterNewTeamFeedbacks = New
+iconTabFilterPendingTeamFeedbacks = Pending
+iconTabFilterCompletedTeamFeedbacks = Completed
+columnFromManager = From ManagerFeedback
+columnToEmployee = To Employee
+#Team Feedback Detail 
+teamFeedbackDetailPage = Complete Feedback
+
+
