--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -23,7 +23,7 @@ changePassword  = Change Password
 
 
 # After Login
-RequestPEG = Request new PEG
+
 DisplayPEGList = Display PEG list
 ListSentReceived = Display list of sent/received feedback 
 NewFeedback =  New feedback
@@ -54,6 +54,11 @@ columnEmployee = Employee
 columnProject  = Project
 columnStatus = Status
 columnRequestDate  = RequestDate
+
+
+#Request PEG
+requestPEGPage = Request new PEG
+
 
 
 #Feedback 360 
@@ -89,5 +94,11 @@ columnFromManager = From ManagerFeedback
 columnToEmployee = To Employee
 #Team Feedback Detail 
 teamFeedbackDetailPage = Complete Feedback
+teamFeedbackDetailPageManagerTileTitle = Manager who demanded feedback
+teamFeedbackDetailPageEmployeeReviewTileTitle= Employee reviewed
+teamFeedbackDetailPageProjectTileTitle = Project ID
+teamFeedbackDetailPageSendDateTileTitle  = Send At
+teamFeedbackDetailPageCategoryTileTitle = Category
+sendFeedbackBtn = Send Feedback
 
 
