--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -58,6 +58,14 @@ columnRequestDate  = RequestDate
 
 #Request PEG
 requestPEGPage = Request new PEG
+nameText = Name
+emailText = Email
+suText  = Service Unit
+fiscalYearText = Fiscal Year
+projectSelect = Project name
+managerSelect = Responsible Manager
+sendRequestBtn = Send Request
+
 
 
 
@@ -73,6 +81,13 @@ columnProject = Project
 columnCategory = Category
 columnRating = Rating
 columnSentDate = Sent Date
+#Feedback Details
+feedbackDetailsPage = Info about Feedback
+
+
+
+
+
 #Request New Feedback
 newFeedbackPage = New Feedback 
 selectUserInput = Select User
@@ -94,11 +109,11 @@ columnFromManager = From ManagerFeedback
 columnToEmployee = To Employee
 #Team Feedback Detail 
 teamFeedbackDetailPage = Complete Feedback
-teamFeedbackDetailPageManagerTileTitle = Manager who demanded feedback
-teamFeedbackDetailPageEmployeeReviewTileTitle= Employee reviewed
-teamFeedbackDetailPageProjectTileTitle = Project ID
-teamFeedbackDetailPageSendDateTileTitle  = Send At
-teamFeedbackDetailPageCategoryTileTitle = Category
+ManagerTileTitle = Manager who demanded feedback
+EmployeeReviewTileTitle= Employee reviewed
+ProjectTileTitle = Project ID
+SendDateTileTitle  = Send At
+CategoryTileTitle = Category
 sendFeedbackBtn = Send Feedback
 
 
