Create and Update team feedback

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -23,13 +23,10 @@ changePassword  = Change Password
 
 
 # After Login
-
 DisplayPEGList = Display PEG list
 ListSentReceived = Display list of sent/received feedback 
 NewFeedback =  New feedback
 RatingTooltip = Rating\n1 - Dissapointing\n2 - Mediocre\n3 - Average\n4 - Good\n5 - Excellent
-
-
 ManagerFeedback = Manager Feedback
 ManagerPEG = Manager PEG
 
@@ -53,7 +50,7 @@ columnEvaluator = Evaluator
 columnEmployee = Employee
 columnProject  = Project
 columnStatus = Status
-columnRequestDate  = RequestDate
+columnRequestDate  = Request Date
 
 
 #Request PEG
@@ -65,8 +62,6 @@ fiscalYearText = Fiscal Year
 projectSelect = Project name
 managerSelect = Responsible Manager
 sendRequestBtn = Send Request
-
-
 
 
 #Feedback 360 
@@ -81,11 +76,10 @@ columnProject = Project
 columnCategory = Category
 columnRating = Rating
 columnSentDate = Sent Date
+
+
 #Feedback Details
 feedbackDetailsPage = Info about Feedback
-
-
-
 
 
 #Request New Feedback
@@ -98,15 +92,13 @@ description = Description
 descriptionTextArea= Enter Text
 
 
-
 #Team Feedback
 myTeamFeedbackPageTitle = My Team Feedback
 iconTabFilterAllTeamFeedbacks = All Feedbacks
 iconTabFilterNewTeamFeedbacks = New
 iconTabFilterPendingTeamFeedbacks = Pending
 iconTabFilterCompletedTeamFeedbacks = Completed
-columnFromManager = From ManagerFeedback
-columnToEmployee = To Employee
+columnToTeamMember = To Team Member
 #Team Feedback Detail 
 teamFeedbackDetailPage = Complete Feedback
 ManagerTileTitle = Manager who demanded feedback
