--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -53,6 +53,29 @@ columnStatus = Status
 columnRequestDate  = Request Date
 
 
+#PEG Details
+PEGDetailsPageTitle = PEG Details
+employeeDetails = Details about Employee
+feedbackDetails = Details about Feedback
+projectDetails= Details about Project
+employeeNameTileTitle = Employee name
+personnelNumberTileTitle = Personnel Number
+fiscalYearTileTitle  = Fiscal Year
+currentCarrerLevelTileTitle = Current Career Level
+organizationalAssignmentTileTitle = Organizational Assignment
+projectIDTileTitle = Project ID
+dateOfPEGTileTitle= Date of PEG
+evaluatorTileTitle= Name of the Evaluator
+noOfProjectDaysEvaluatedTileTitle= Number of Project Days Evaluated
+projectTileTitle= Name of the project
+projectManagerTileTitle= Name of the Project Manager
+customerTileTitle= Customer name
+criteriaColumn = Criteria
+ratingColumn = Rating
+ratingDescriptionColumn = Description of the Rating
+recommendationsColumn = Recommendations/Comments
+
+
 #Request PEG
 requestPEGPage = Request new PEG
 nameText = Name
@@ -101,11 +124,11 @@ iconTabFilterCompletedTeamFeedbacks = Completed
 columnToTeamMember = To Team Member
 #Team Feedback Detail 
 teamFeedbackDetailPage = Complete Feedback
-ManagerTileTitle = Manager who demanded feedback
-EmployeeReviewTileTitle= Employee reviewed
-ProjectTileTitle = Project ID
-SendDateTileTitle  = Send At
-CategoryTileTitle = Category
+managerTileTitle = Manager who demanded feedback
+employeeReviewTileTitle= Employee reviewed
+projectTileTitle = Project ID
+sendDateTileTitle  = Send At
+categoryTileTitle = Category
 sendFeedbackBtn = Send Feedback
 
 
