--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -149,4 +149,4 @@ giveGrade = Geben Sie eine Überprüfung
 #Request Team Feedback
 selectEvaluator = Wählen Sie ein Gutachter
 selectTeamMember = Wählen Sie ein Teammitglied
-requestFeedback = Anfrage ein Rückmeldung
+requestFeedback = Anfrage die Rückmeldung
