--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,5 +1,7 @@
-# App Descriptor
-
+# Formatter
+new = New
+pending = Pending
+completed = Completed
 
 # LogReg
 loginBtn = Log In
@@ -28,7 +30,7 @@ changePassword  = Change Password
 DisplayPEGList = Display PEG list
 ListSentReceived = Display list of sent/received feedback 
 NewFeedback =  New feedback
-RatingTooltip = Rating\n1 - Dissapointing\n2 - Mediocre\n3 - Average\n4 - Good\n5 - Excellent
+RatingTooltip = Rating\n1 - Disappointing\n2 - Mediocre\n3 - Average\n4 - Good\n5 - Excellent
 ManagerFeedback = Manager Feedback
 ManagerPEG = Manager PEG
 
@@ -41,6 +43,14 @@ feedback360 = Feedback 360
 teamFeedback = Team Feedback
 logOut = Log out
 
+#MyProfile
+telephone = Telephone
+save = Save
+edit = Edit
+newName = New name
+newEmail = New email
+newTelephone = New telephone
+newServiceUnit = New service unit
 
 #PEG
 PEGPageTitle = List of PEGs
@@ -69,7 +79,7 @@ sendRequestBtn = Send Request
 #Manager Feedback
 employeeDetails = Details about Employee
 employeeName = Employee name
-personnelNumber = Personnel Number
+personnelNumber = Personal Number
 fiscalYear = Fiscal Year
 careerLevel = Current Career Level
 organizationalAssignment = Organizational Assignment
