--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -1,5 +1,7 @@
-# App Descriptor
-
+# Formatter
+new = Neue
+pending = Ausstehend
+completed = Fertig
 
 # LogReg
 loginBtn = Anmelden
@@ -26,9 +28,8 @@ changePassword  = Passwort zurücksetzen
 
 # After Login
 DisplayPEGList = Display PEG list
-ListSentReceived = Display list of sent/received feedback 
 NewFeedback =  New feedback
-RatingTooltip = Rating\n1 - Dissapointing\n2 - Mediocre\n3 - Average\n4 - Good\n5 - Excellent
+RatingTooltip = Bewertung\n1 - Enttäuschend\n2 - Mittelmäßig\n3 - Durchschnittlich\n4 - Gut\n5 - Exzellent
 ManagerFeedback = Manager Feedback
 ManagerPEG = Manager PEG
 
@@ -37,9 +38,18 @@ ManagerPEG = Manager PEG
 mainPageTitle = Main Menu
 profileBtn = Meine Profil
 PEG = PEG
-feedback360 = Rückmeldung 360
-teamFeedback = Team Rückmeldung
+feedback360 = Feedback 360
+teamFeedback = Team Feedback
 logOut = Abmelden
+
+#MyProfile
+telephone = Telefon
+save = Speichern
+edit = Bearb
+newName = Neue Name
+newEmail = Neue Email
+newTelephone = Neue Telefon
+newServiceUnit = Neue Wartungseinheit
 
 
 #PEG
@@ -72,7 +82,7 @@ personnelNumber = Personal Nummer
 fiscalYear = Fiskaljahr
 careerLevel = Karrierestufe
 organizationalAssignment = Organisatorische Zuordnung
-feedbackDetails = Details uber die Rückmeldung
+feedbackDetails = Details uber das Feedback
 projectID = Projekt ID
 pegDate = PEG Datum
 evaluatorName = Gutachter Name
@@ -92,10 +102,10 @@ exportExcel = Ausfuhr zu excel
 
 #Feedback 360 
 feedbackPageTitle = Feedback List
-iconTabFilterAllFeedbacks = Alle Rückmeldungen
+iconTabFilterAllFeedbacks = Alle Feedbacks
 iconTabFilterSentFeedbacks = Geschicktet
 iconTabFilterReceivedFeedbacks = Erhalten
-feedbackRequestBtn = Neue Rückmeldung
+feedbackRequestBtn = Neue Feedback
 columnFromUser = Von Benutzer
 columnToUser = Zu Benutzer
 columnProject = Projekt
@@ -117,16 +127,16 @@ sentDate = Sendedatum
 newFeedbackPage = New Feedback 
 selectUserInput = Wählen Sie ein Benutzer
 selectProjectsInput = Wählen Sie ein Projekt
-anonymousCheckBox = Anonym Rückmeldung
-categoryFeedback= Wählen Sie die Rückmeldung Kategorie
+anonymousCheckBox = Anonym Feedback
+categoryFeedback= Wählen Sie die Feedback Kategorie
 description = Beschreibung
-descriptionTextArea= ihre Rückmeldung
+descriptionTextArea= ihre Feedback
 send = Abschicken
 
 
 #Team Feedback
 myTeamFeedbackPageTitle = My Team Feedback
-iconTabFilterAllTeamFeedbacks = Alle Rückmeldungen
+iconTabFilterAllTeamFeedbacks = Alle Feedback
 iconTabFilterNewTeamFeedbacks = Neue
 iconTabFilterPendingTeamFeedbacks = Ausstehend
 iconTabFilterCompletedTeamFeedbacks = Fertig
@@ -138,7 +148,7 @@ otherTeams = Andere Teams
 
 #Team Feedback Detail 
 teamFeedbackDetailPage = Complete Feedback
-ManagerTileTitle = Manager das der Rückmeldung gefordert
+ManagerTileTitle = Manager das das Feedback gefordert
 EmployeeReviewTileTitle= Geprüft Angestellter
 ProjectTileTitle = Projekt ID
 SendDateTileTitle  = Sendedatum
@@ -149,4 +159,4 @@ giveGrade = Geben Sie eine Überprüfung
 #Request Team Feedback
 selectEvaluator = Wählen Sie ein Gutachter
 selectTeamMember = Wählen Sie ein Teammitglied
-requestFeedback = Anfrage die Rückmeldung
+requestFeedback = Anfrage das Feedback
