--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,6 +3,45 @@ new = New
 pending = Pending
 completed = Completed
 
+disappointing = Disappointing
+mediocre = Mediocre
+average = Average
+good = Good
+excellent = Excellent
+
+technical = Technical
+soft = Soft
+other = Other
+
+error = Error
+warning = Warning
+success = Success
+
+lessThan = Less than 90 days
+between = Between 90 and 180 days
+moreThan = More than 180 days
+
+gradeZero = Not assessable at this time
+gradeOne = Does not meet expectations
+gradeTwo = Partially meets expectations
+gradeThree = Fully meets expectations
+gradeFour = Exceeds expectations
+
+firstCriteria = Professional and Industry Experience
+secondCriteria = Project and Program Management
+thirdCriteria = Strategy Focus
+fourthCriteria = Customer Focus
+fifthCriteria = Employee Focus
+sixthCriteria = Focus on Excellence
+
+careerLevelZero = Junior Consultant
+careerLevelOne = Consultant
+careerLevelTwo = Senior Consultant
+careerLevelThree = Manager
+careerLevelFour = Senior Manager
+careerLevelFive = Lead Manager
+
+
 # LogReg
 loginBtn = Log In
 registerBtn = Register
