--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -3,6 +3,44 @@ new = Neue
 pending = Ausstehend
 completed = Fertig
 
+disappointing = Enttäuschend
+mediocre = Mittelmäßig
+average = Durchschnittlich
+good = Gut
+excellent = Exzellent
+
+technical = Technisch
+soft = Soft
+other = Andere
+
+error = Fehler
+warning = Warnung
+success = Erfolg
+
+lessThan = Weniger als 90 Tage
+between = Zwischen 90 und 180 Tage
+moreThan = Mehr als 180 Tage
+
+gradeZero = Zur Zeit nich überschaubar
+gradeOne = Es entspricht den Erwartungens nicht
+gradeTwo = Es entspricht den Erwartungens teilweise
+gradeThree = Es völlig entspricht den Erwartungens
+gradeFour = Es übertrifft die Erwartungen
+
+firstCriteria = Berufs- und Branchenerfahrung
+secondCriteria = Projekt- und Programmmanagement
+thirdCriteria = Strategiefokus
+fourthCriteria = Kundenorientierung
+fifthCriteria = Mitarbeiterfokus
+sixthCriteria = Exzellenzfokus
+
+careerLevelZero = Junior Consultant
+careerLevelOne = Consultant
+careerLevelTwo = Senior Consultant
+careerLevelThree = Manager
+careerLevelFour = Senior Manager
+careerLevelFive = Lead Manager
+
 # LogReg
 loginBtn = Anmelden
 registerBtn = Konto erstellen
