--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -54,6 +54,8 @@ columnEmployee = Employee
 columnProject  = Project
 columnStatus = Status
 columnRequestDate  = Request Date
+searchEvaluatorEmployee = Search by evaluator and employee
+filterEvaluatorEmployee  = Filter by evaluator and employee
 
 
 #PEG Details
@@ -126,6 +128,8 @@ columnProject = Project
 columnCategory = Category
 columnRating = Rating
 columnSentDate = Sent Date
+searchUser = Search user
+filterUser = Filter user
 
 
 #Feedback Details
