--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -41,6 +41,8 @@ careerLevelThree = Manager
 careerLevelFour = Senior Manager
 careerLevelFive = Lead Manager
 
+projectNotSpecified = Project not specified
+infoUpdated = The information was updated successfully!
 
 # LogReg
 loginBtn = Log In
@@ -63,7 +65,8 @@ enterNewPassword = Enter your new password
 # ForgotPass
 forgotPassword = Forgot Password
 changePassword  = Change Password
-
+passChanged = Password changed!
+invalidUserEmail = Username or email invalid!
 
 # After Login
 DisplayPEGList = Display PEG list
@@ -81,6 +84,7 @@ PEG = PEG
 feedback360 = Feedback 360
 teamFeedback = Team Feedback
 logOut = Log out
+logOutConfirm = Are you sure you want to log out?
 
 #MyProfile
 telephone = Telephone
@@ -126,7 +130,7 @@ criteriaColumn = Criteria
 ratingColumn = Rating
 ratingDescriptionColumn = Description of the Rating
 recommendationsColumn = Recommendations/Comments
-
+toPendingPEG = This PEG is now on Pending!
 
 #Request PEG
 requestPEGPage = Request new PEG
@@ -162,6 +166,7 @@ submit = Submit
 isCompleted = is Completed
 selectDaysEval = Select the number of project days evaluated
 exportExcel = Export to excel
+toPendingFeedback = This Feedback is now on Pending!
 
 #Feedback 360 
 feedbackPageTitle = Feedback List
@@ -224,3 +229,28 @@ selectEvaluator = Select Evaluator
 selectTeamMember = Select Team Member
 requestFeedback = Request Feedback
 
+#Exceptions
+feedbackToYourself = You cannot send a feedback to yourself!\n
+userNotSelected = Please select an user!\n
+descriptionNotFilled = Please insert a description!\n
+projectNotSelected = Please select a project!\n
+skillNotSelected = Please select a skill!\n
+ratingIsZero = Rating cannot be 0!\n
+
+feedbackSucces = Feedback has been successfully sent!
+feedbackError = Feedback failed to send!
+feedbackRequestSucces = Feedback has been successfully requested!
+feedbackRequestError = Feedback requested failed to send!
+
+registerSucces = You have successfully registered!
+
+managerNotSelected = Please select a manager!\n
+teamMemberNotSelected = Please select a team member!\n
+evaluatorNotSelected = Please select an evaluator!\n
+evaluatorSelfSelect = You cannot select yourself to be the Evaluator!\n
+
+pegRequestSucces = PEG has been successfully requested!
+pegRequestError = Fail to request PEG!
+
+#Spreadsheet
+spreadsheedExport = Spreadsheet export has finished
