--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -13,9 +13,9 @@ technical = Technisch
 soft = Soft
 other = Andere
 
-error = Fehler
-warning = Warnung
-success = Erfolg
+error = Error
+warning = Warning
+success = Success
 
 lessThan = Weniger als 90 Tage
 between = Zwischen 90 und 180 Tage
@@ -41,6 +41,9 @@ careerLevelThree = Manager
 careerLevelFour = Senior Manager
 careerLevelFive = Lead Manager
 
+projectNotSpecified = Projekt nicht angegeben
+infoUpdated = Die Informationen wurden erfolgreich aktualisiert!
+
 # LogReg
 loginBtn = Anmelden
 registerBtn = Konto erstellen
@@ -62,6 +65,8 @@ enterNewPassword = ihre neue Passwort
 # ForgotPass
 forgotPassword = Passwort zurücksetzen
 changePassword  = Passwort zurücksetzen
+passChanged = Passwort geändert!
+invalidUserEmail = Benutzername oder Email ungültig!
 
 
 # After Login
@@ -79,6 +84,7 @@ PEG = PEG
 feedback360 = Feedback 360
 teamFeedback = Team Feedback
 logOut = Abmelden
+logOutConfirm = Möchten Sie sich wirklich abmelden?
 
 #MyProfile
 telephone = Telefon
@@ -137,6 +143,8 @@ submit = Absenden
 isCompleted = ist Fertig
 selectDaysEval = Wählen Sie die Anzahl der bewertet Projekttage 
 exportExcel = Ausfuhr zu excel
+toPendingPEG = Diese PEG ist jetzt ausstehend!
+toPendingFeedback = Diese Feedback ist jetzt ausstehend!
 
 #Feedback 360 
 feedbackPageTitle = Feedback List
@@ -186,11 +194,11 @@ otherTeams = Andere Teams
 
 #Team Feedback Detail 
 teamFeedbackDetailPage = Complete Feedback
-ManagerTileTitle = Manager das das Feedback gefordert
-EmployeeReviewTileTitle= Geprüft Angestellter
-ProjectTileTitle = Projekt ID
-SendDateTileTitle  = Sendedatum
-CategoryTileTitle = Kategorie
+managerTileTitle = Manager das das Feedback gefordert
+employeeReviewTileTitle= Geprüft Angestellter
+projectTileTitle = Projekt ID
+sendDateTileTitle  = Sendedatum
+categoryTileTitle = Kategorie
 sendFeedbackBtn = Abschicken
 giveGrade = Geben Sie eine Überprüfung
 
@@ -198,3 +206,29 @@ giveGrade = Geben Sie eine Überprüfung
 selectEvaluator = Wählen Sie ein Gutachter
 selectTeamMember = Wählen Sie ein Teammitglied
 requestFeedback = Anfrage das Feedback
+
+#Exceptions
+feedbackToYourself = Sie können kein Feedback an sich selbst senden!\n
+userNotSelected = Bitte wählen Sie einen Benutzer aus!\n
+descriptionNotFilled = Bitte geben Sie eine Beschreibung ein!\n
+projectNotSelected = Bitte wählen Sie ein Projekt aus!\n
+skillNotSelected = Bitte wählen sie eine Kategorie !\n
+ratingIsZero = Bewertung darf nicht 0 sein!\n
+
+feedbackSucces = Feedback wurde erfolgreich gesendet!
+feedbackError = Feedback konnte nicht gesendet werden!
+feedbackRequestSucces = Feedback wurde erfolgreich angefordert!
+feedbackRequestError = Das angeforderte Feedback konnte nicht gesendet werden!
+
+registerSucces = Sie haben sich erfolgreich registriert!
+
+managerNotSelected = Bitte wählen Sie ein Manager aus!\n
+teamMemberNotSelected = Bitte wählen Sie ein Teammitglied aus!\n
+evaluatorNotSelected = Bitte wählen Sie einen Gutachter aus!\n
+evaluatorSelfSelect = Sie können sich nicht selbst als Evaluator auswählen!\n
+
+pegRequestSucces = PEG wurde erfolgreich angefordert!
+pegRequestError = PEG-Anforderung fehlgeschlagen!
+
+#Spreadsheet
+spreadsheedExport = Spreadsheet export ist fertig
