--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -43,6 +43,7 @@ careerLevelFive = Lead Manager
 
 projectNotSpecified = Project not specified
 infoUpdated = The information was updated successfully!
+infoError = Update failed!
 
 # LogReg
 loginBtn = Log In
