--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -43,6 +43,7 @@ careerLevelFive = Lead Manager
 
 projectNotSpecified = Projekt nicht angegeben
 infoUpdated = Die Informationen wurden erfolgreich aktualisiert!
+infoError = Fehler beim Aktualisieren!
 
 # LogReg
 loginBtn = Anmelden
