--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -95,6 +95,7 @@ newName = New name
 newEmail = New email
 newTelephone = New telephone
 newServiceUnit = New service unit
+ViewProfilePageTitle = View Profile
 
 #PEG
 PEGPageTitle = List of PEGs
