--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -95,6 +95,7 @@ newName = Neue Name
 newEmail = Neue Email
 newTelephone = Neue Telefon
 newServiceUnit = Neue Wartungseinheit
+ViewProfilePageTitle = Mein Profil
 
 
 #PEG
