--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -254,5 +254,18 @@ evaluatorSelfSelect = You cannot select yourself to be the Evaluator!\n
 pegRequestSucces = PEG has been successfully requested!
 pegRequestError = Fail to request PEG!
 
+introduceUsername = Please introduce a username!\n
+introducePassword = Please introduce a password!\n
+introduceEmail = Please introduce an email!\n
+
+introduceYourName = Please introduce your full name!\n
+introduceYourEmail = Please introduce your email!\n
+introduceYourPersonalNo = Please introduce your personal number!\n
+introduceServiceUnit = Please introduce a service unit!\n
+
+introduceUsernamePassRecovery = You have to enter your username for password recovery!\n
+introduceEmailPassRecovery = You have to enter your e-mail for password recovery!\n
+introducePassword = You have to enter a new password!\n
+
 #Spreadsheet
 spreadsheedExport = Spreadsheet export has finished
