--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -232,5 +232,18 @@ evaluatorSelfSelect = Sie können sich nicht selbst als Evaluator auswählen!\n
 pegRequestSucces = PEG wurde erfolgreich angefordert!
 pegRequestError = PEG-Anforderung fehlgeschlagen!
 
+introduceUsername = Bitte geben Sie einen Benutzernamen ein!\n
+introducePassword = Bitte geben Sie ein Passwort ein!\n
+introduceEmail = Bitte geben Sie eine Email ein!\n
+
+introduceYourName = Bitte geben Sie Ihren Namen ein!\n
+introduceYourEmail = Bitte geben Sie Ihre Email ein!\n
+introduceYourPersonalNo = Bitte geben Sie Ihre persönliche Nummer ein!\n
+introduceServiceUnit = Bitte geben Sie eine Serviceeinheit ein!\n
+
+introduceUsernamePassRecovery = Sie müssen Ihren Benutzernamen für die Passwortzurücksetzung eingeben!\n
+introduceEmailPassRecovery = Sie müssen Ihre Email für die Passwortzurücksetzung eingeben!\n
+introducePassword = Sie müssen ein neues Passwort eingeben!\n
+
 #Spreadsheet
 spreadsheedExport = Spreadsheet export ist fertig
