with aesthetic not on point

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -57,6 +57,15 @@ submitRegisterBtn = Submit Register
 companyEmail = Company email
 
 
+
+################################################################################################################################
+userText = Username
+passText = Password
+emailText = Email
+enterPassword = Enter your password
+################################################################################################################################
+
+
 #Forgot Password
 changePasswordBtn = Change Password
 enterUsername = Enter your username
@@ -239,6 +248,18 @@ projectNotSelected = Please select a project!\n
 skillNotSelected = Please select a skill!\n
 ratingIsZero = Rating cannot be 0!\n
 
+
+
+
+############################################################################################################################
+usernameNotEntered = Please introduce a username!\n
+passwordNotEntered = Please introduce a password!\n
+emailNotEntered = Please introduce an email!\n
+############################################################################################################################
+
+
+
+############
 feedbackSucces = Feedback has been successfully sent!
 feedbackError = Feedback failed to send!
 feedbackRequestSucces = Feedback has been successfully requested!
