another set of small fixes

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -252,9 +252,9 @@ ratingIsZero = Rating cannot be 0!\n
 
 
 ############################################################################################################################
-usernameNotEntered = Please introduce a username!\n
-passwordNotEntered = Please introduce a password!\n
-emailNotEntered = Please introduce an email!\n
+usernameNotEntered = Please insert a username!\n
+passwordNotEntered = Please insert a password!\n
+emailNotEntered = Please insert an e-mail address!\n
 ############################################################################################################################
 
 
@@ -275,14 +275,14 @@ evaluatorSelfSelect = You cannot select yourself to be the Evaluator!\n
 pegRequestSucces = PEG has been successfully requested!
 pegRequestError = Fail to request PEG!
 
-introduceUsername = Please introduce a username!\n
-introducePassword = Please introduce a password!\n
-introduceEmail = Please introduce an email!\n
+introduceUsername = Please insert a username!\n
+introducePassword = Please insert a password!\n
+introduceEmail = Please insert an email!\n
 
-introduceYourName = Please introduce your full name!\n
-introduceYourEmail = Please introduce your email!\n
-introduceYourPersonalNo = Please introduce your personal number!\n
-introduceServiceUnit = Please introduce a service unit!\n
+introduceYourName = Please insert your full name!\n
+introduceYourEmail = Please insert your email!\n
+introduceYourPersonalNo = Please insert your personal number!\n
+introduceServiceUnit = Please insert a service unit!\n
 
 introduceUsernamePassRecovery = You have to enter your username for password recovery!\n
 introduceEmailPassRecovery = You have to enter your e-mail for password recovery!\n
