--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -248,18 +248,6 @@ projectNotSelected = Please select a project!\n
 skillNotSelected = Please select a skill!\n
 ratingIsZero = Rating cannot be 0!\n
 
-
-
-
-############################################################################################################################
-usernameNotEntered = Please insert a username!\n
-passwordNotEntered = Please insert a password!\n
-emailNotEntered = Please insert an e-mail address!\n
-############################################################################################################################
-
-
-
-############
 feedbackSucces = Feedback has been successfully sent!
 feedbackError = Feedback failed to send!
 feedbackRequestSucces = Feedback has been successfully requested!
@@ -287,6 +275,15 @@ introduceServiceUnit = Please insert a service unit!\n
 introduceUsernamePassRecovery = You have to enter your username for password recovery!\n
 introduceEmailPassRecovery = You have to enter your e-mail for password recovery!\n
 introducePassword = You have to enter a new password!\n
+
+invalidUsername = Invalid Username!\n
+invalidEmail = Invalid Email!\n
+invalidPassword = Invalid Password!\n
+
+inputInvalidUsername = Username should contain only lowercase and uppercase letters and numbers
+inputInvalidPassword = Password must contain minimum six characters, at least one letter and one number
+inputInvalidEmail = is not a valid e-mail address
+
 
 #Spreadsheet
 spreadsheedExport = Spreadsheet export has finished
