--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -245,5 +245,13 @@ introduceUsernamePassRecovery = Sie müssen Ihren Benutzernamen für die Passwor
 introduceEmailPassRecovery = Sie müssen Ihre Email für die Passwortzurücksetzung eingeben!\n
 introducePassword = Sie müssen ein neues Passwort eingeben!\n
 
+invalidUsername = Ungültiger Benutzername!\n
+invalidEmail = Ungültige Email!\n
+invalidPassword = Ungültiges Passwort!\n
+
+inputInvalidUsername = Der Benutzername sollte nur Klein- und Großbuchstaben sowie Zahlen enthalten
+inputInvalidPassword = Das Passwort muss mindestens sechs Zeichen, mindestens einen Buchstaben und eine Zahl enthalten
+inputInvalidEmail = ist keine gültige Email-Adresse
+
 #Spreadsheet
 spreadsheedExport = Spreadsheet export ist fertig
