--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -55,15 +55,7 @@ Password = Password
 #Register
 submitRegisterBtn = Submit Register
 companyEmail = Company email
-
-
-
-################################################################################################################################
-userText = Username
-passText = Password
-emailText = Email
 enterPassword = Enter your password
-################################################################################################################################
 
 
 #Forgot Password
@@ -274,15 +266,15 @@ introduceServiceUnit = Please insert a service unit!\n
 
 introduceUsernamePassRecovery = You have to enter your username for password recovery!\n
 introduceEmailPassRecovery = You have to enter your e-mail for password recovery!\n
-introducePassword = You have to enter a new password!\n
+introducePasswordRecovery = You have to enter a new password!\n
 
 invalidUsername = Invalid Username!\n
 invalidEmail = Invalid Email!\n
 invalidPassword = Invalid Password!\n
 
-inputInvalidUsername = Username should contain only lowercase and uppercase letters and numbers
-inputInvalidPassword = Password must contain minimum six characters, at least one letter and one number
-inputInvalidEmail = is not a valid e-mail address
+inputInvalidUsername = Username should contain only lowercase and uppercase letters and numbers\n
+inputInvalidPassword = Password must contain minimum six characters, at least one letter and one number\n
+inputInvalidEmail = is not a valid e-mail address\n
 
 
 #Spreadsheet
