--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -55,7 +55,7 @@ Password = Passwort
 #Register
 submitRegisterBtn = Konto erstellen
 companyEmail = Firma email
-
+enterPassword = Ihre Passwort
 
 #Forgot Password
 changePasswordBtn = Passwort zurücksetzen
@@ -243,15 +243,15 @@ introduceServiceUnit = Bitte geben Sie eine Serviceeinheit ein!\n
 
 introduceUsernamePassRecovery = Sie müssen Ihren Benutzernamen für die Passwortzurücksetzung eingeben!\n
 introduceEmailPassRecovery = Sie müssen Ihre Email für die Passwortzurücksetzung eingeben!\n
-introducePassword = Sie müssen ein neues Passwort eingeben!\n
+introducePasswordRecovery = Sie müssen ein neues Passwort eingeben!\n
 
 invalidUsername = Ungültiger Benutzername!\n
 invalidEmail = Ungültige Email!\n
 invalidPassword = Ungültiges Passwort!\n
 
-inputInvalidUsername = Der Benutzername sollte nur Klein- und Großbuchstaben sowie Zahlen enthalten
-inputInvalidPassword = Das Passwort muss mindestens sechs Zeichen, mindestens einen Buchstaben und eine Zahl enthalten
-inputInvalidEmail = ist keine gültige Email-Adresse
+inputInvalidUsername = Der Benutzername sollte nur Klein- und Großbuchstaben sowie Zahlen enthalten\n
+inputInvalidPassword = Das Passwort muss mindestens sechs Zeichen, mindestens einen Buchstaben und eine Zahl enthalten\n
+inputInvalidEmail = ist keine gültige Email-Adresse\n
 
 #Spreadsheet
 spreadsheedExport = Spreadsheet export ist fertig
