--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -87,6 +87,9 @@ feedback360 = Feedback 360
 teamFeedback = Team Feedback
 logOut = Log out
 logOutConfirm = Are you sure you want to log out?
+pegDescription = Request or complete requested PEGs
+feedback360Description = Rate a person task performance
+teamFeedbackDescription = Get feedback for your team from other users
 
 #MyProfile
 telephone = Telephone
