--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -86,6 +86,10 @@ feedback360 = Feedback 360
 teamFeedback = Team Feedback
 logOut = Abmelden
 logOutConfirm = Möchten Sie sich wirklich abmelden?
+pegDescription = Angeforderte PEGs anfordern oder vervollständigen
+feedback360Description = Bewerten Sie die Aufgabenleistung einer Person
+teamFeedbackDescription = Holen Sie Feedback für Ihr Team von anderen Benutzern ein
+
 
 #MyProfile
 telephone = Telefon
