Redirect if User is null

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -282,3 +282,6 @@ inputInvalidEmail = is not a valid e-mail address\n
 
 #Spreadsheet
 spreadsheedExport = Spreadsheet export has finished
+
+#Login redirect
+loginRedirect = The session has expired and you need to log in again\n You will be redirected to the login page
