--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -259,3 +259,6 @@ inputInvalidEmail = ist keine gültige Email-Adresse\n
 
 #Spreadsheet
 spreadsheedExport = Spreadsheet export ist fertig
+
+#Login redirect
+loginRedirect = Die Sitzung ist abgelaufen und Sie müssen sich erneut anmelden\n Sie werden zur Anmeldeseite weitergeleitet
