--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -33,6 +33,7 @@ thirdCriteria = Strategy Focus
 fourthCriteria = Customer Focus
 fifthCriteria = Employee Focus
 sixthCriteria = Focus on Excellence
+overall = Overall Rating
 
 careerLevelZero = Junior Consultant
 careerLevelOne = Consultant
@@ -166,6 +167,7 @@ projectManagerName = Name of the Project Manager
 customerName = Customer name
 criteria = Criteria
 rating = Rating
+ratingMax = Rating (MAX. 4 Stars)
 ratingDescription = Description of the Rating
 recommendations = Recommendations/Comments
 submit = Submit
