--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -33,6 +33,7 @@ thirdCriteria = Strategiefokus
 fourthCriteria = Kundenorientierung
 fifthCriteria = Mitarbeiterfokus
 sixthCriteria = Exzellenzfokus
+overall = Gesamtwertung
 
 careerLevelZero = Junior Consultant
 careerLevelOne = Consultant
@@ -143,6 +144,7 @@ projectManagerName = Projektverantwortlicher Name
 customerName = Kunde Name
 criteria = Kriterien
 rating = Bewertung
+ratingMax = Rating (MAX. 4 Stars)
 ratingDescription = Beschreibung der Bewertung
 recommendations = Empfehlungen/Kommentare
 submit = Absenden
