Hover on tile and button

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -8,6 +8,7 @@ mediocre = Mediocre
 average = Average
 good = Good
 excellent = Excellent
+notSpecified = Not specified
 
 technical = Technical
 soft = Soft
