--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -8,6 +8,7 @@ mediocre = Mittelmäßig
 average = Durchschnittlich
 good = Gut
 excellent = Exzellent
+notSpecified = Nicht festgelegt
 
 technical = Technisch
 soft = Soft
